// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVaultFactory predicts vault addresses 1`] = `5199`;

exports[`EthVaultFactory predicts vault addresses 2`] = `5187`;

exports[`EthVaultFactory private vault deployment gas with own escrow 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 679211,
}
`;

exports[`EthVaultFactory private vault deployment gas with shared escrow 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 519902,
}
`;

exports[`EthVaultFactory public vault deployment gas with own escrow 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 630927,
}
`;

exports[`EthVaultFactory public vault deployment gas with shared escrow 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 471618,
}
`;
